<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="120dp"
    android:orientation="vertical"
    tools:context=".utils.Sort_dialog">
    <TextView
        android:id="@+id/sort_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/sort_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:icon="@drawable/ic_action_sort_name"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sort_time"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/sort_time"
        android:layout_gravity="center"
        android:icon="@drawable/ic_action_sort_time"
        android:gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sort_size"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/sort_size"
        android:layout_gravity="center"
        android:icon="@drawable/ic_action_sort_size"
        android:gravity="center"
        android:textSize="20sp"/>
</LinearLayout>
